# formax

./: README.md  docs1.md  pyproject.toml  requirements-tests.txt
.github/workflows/: benchmark.yml  python-publish.yml
benchmark/: benchmark_model_eff.py  benchmark_model_memory.py  conftest.py  models.py
src/formax/: __init__.py  base.py  exceptions.py  fields.py  formatters.py  make_init.py  optimised_funcs.py  resolver.py  typing.py  utils.py
src/pydantic_mini/: __init__.py  base.py  decorators.py  exceptions.py  fields.py  formatters.py  make_init.py  typing.py  utils.py
tests/: test_base.py  test_class_signature_detection.py  test_field_type_resolver.py  test_formatter.py  test_forward_ref.py  test_make_init.py  test_schema_validation.py  test_typing.py  test_validators_and_preformatters.py
tests/integration/: test_workflow.py
