[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "formax-py"
version="0.10.0"
requires-python = ">=3.8"
authors = [
    {name = "nshaibu", email = "nafiushaibu1@gmail.com"},
]
description="High-performance Python model builder and validation engine with zero dependencies"
keywords = [
  "data-validation",
  "schema",
  "dataclass",
  "model",
  "serialization",
  "validation",
  "class-builder",
  "orm",
  "formax"
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "typing-extensions>=4.12.2"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage="https://github.com/nshaibu/formax"
Issues="https://github.com/nshaibu/formax/issues"
CI="https://github.com/nshaibu/formax/actions"
[project.optional-dependencies]
dev = [
    "coverage>=7.4.1",
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest>=8.3.4",
    "pytest-benchmark==5.2.3",
    "pyflakes==3.2.0",
    "mccabe==0.7.0",
    "flake8==7.1.1",
    "pycodestyle==2.12.1",
    "flake8-black==0.3.6",
    "black>=22.1.0",
    "click==8.1.8",
    "mypy-extensions==1.0.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.6"
]
[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "if sys.version_info *",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
skip_empty = true
skip_covered = true
[tool.coverage.run]
omit = [
    "tests/*",
    "benchmark/*"
]

